<resources>
    <string name="app_name">RedTubeSearch</string>
    <string name="SearchActivityLabel">Search in RedTube!</string>
    <string name="searchButtonText">search</string>
    <string name="connection_error">Connection error</string>
    <string name="xml_error">XML error</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search_title">Search</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_refresh">Refresh</string>
    <string name="search_hint">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_key_sorting_summary">Sorting</string>
    <string name="pref_key_sorting_title">Sort videos</string>
    <string name="pref_key_sorting_method_title">Sort by</string>
    <string name="pref_key_sorting_method_summary">Videos will be sorted by</string>
    <string name="pref_key_sorting_method_entries_newest">Newest</string>
    <string name="pref_key_sorting_method_entries_mostviewed">Most viewed</string>
    <string name="pref_key_sorting_method_entries_rating">Rating</string>
    <string name="pref_key_sorting_method_default">newest</string>
    <string name="pref_key_sorting_category_title">Sorting</string>
    <string name="pref_key_sorting_parameter_entries_weekly">Weekly</string>
    <string name="pref_key_sorting_parameter_entries_monthly">Monthly</string>
    <string name="pref_key_sorting_parameter_entries_alltime">All time</string>
    <string name="pref_key_sorting_parameter_summary">Period</string>
    <string name="pref_key_sorting_parameter_title">Period</string>
    <string name="pref_key_sorting_parameter_default">weekly</string>
    <string name="pref_key_tag_category_title"><![CDATA[Tags & Categories]]></string>
    <string name="pref_key_tag_summary">Tag</string>
    <string name="pref_key_tag_title">Tag</string>
    <string name="pref_key_category_title">Category</string>
    <string name="pref_key_category_summary">Category</string>
    <string name="pref_key_category_category_title">Categories</string>
    <string name="pref_key_hascategory_summary">Has Category</string>
    <string name="pref_key_hascategory_title">Has Category</string>
    <string name="pref_key_hastag_summary">Has Tag</string>
    <string name="pref_key_hastag_title">Has Tag</string>
    <string name="pref_key_star_category_title">Stars</string>
    <string name="pref_key_hasstar_summary">Has Star</string>
    <string name="pref_key_hasstar_title">Has Star</string>
    <string name="pref_key_star_title">Stars</string>
    <string name="pref_key_star_summary">Stars</string>
</resources>
